--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site for CSI 2532, a hotel booking service"
     />
     <link rel="manifest" href="./manifest.json" />
     <link
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <title>React App</title>
+    <title>Hotel Book</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
